# zfaktury

./: .dockerignore  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  config.dev.dist.toml  config.dev.toml  config.toml.example  go.mod  go.sum  idea.md  shell.nix  skills-lock.json  tools.go
rust/: CLAUDE.md  Cargo.toml  flake.nix
rust/crates/zfaktury-api/: Cargo.toml
rust/crates/zfaktury-api/src/: ares.rs  cnb.rs  email.rs  error.rs  fakturoid.rs  fio.rs  lib.rs  ocr.rs
rust/crates/zfaktury-app/: Cargo.toml
rust/crates/zfaktury-app/src/: app.rs  assets.rs  icons.rs  main.rs  navigation.rs  root.rs  sidebar.rs  theme.rs
rust/crates/zfaktury-app/src/components/: button.rs  checkbox.rs  confirm_dialog.rs  date_input.rs  expense_items_editor.rs  invoice_items_editor.rs  mod.rs  number_input.rs  select.rs  status_badge.rs  text_area.rs  text_input.rs  toast.rs
rust/crates/zfaktury-app/src/util/: format.rs
rust/crates/zfaktury-app/src/views/: contact_detail.rs  contact_form.rs  contact_list.rs  dashboard.rs  expense_detail.rs  expense_form.rs  expense_import.rs  expense_list.rs  expense_review.rs  import_fakturoid.rs  invoice_detail.rs  invoice_form.rs  invoice_list.rs  mod.rs  recurring_expense_detail.rs  recurring_expense_form.rs  recurring_expense_list.rs  recurring_invoice_detail.rs  recurring_invoice_form.rs  recurring_invoice_list.rs  reports.rs  settings_audit.rs  settings_backup.rs  settings_categories.rs  settings_email.rs  settings_firma.rs  settings_pdf.rs  settings_sequences.rs  stub.rs  tax_credits.rs  tax_health_detail.rs  tax_health_form.rs  tax_income_detail.rs  tax_income_form.rs  tax_investments.rs  tax_overview.rs  tax_prepayments.rs  tax_social_detail.rs  tax_social_form.rs  vat_control_detail.rs  (+6 more)
rust/crates/zfaktury-config/: Cargo.toml
rust/crates/zfaktury-config/src/: lib.rs
rust/crates/zfaktury-core/: Cargo.toml
rust/crates/zfaktury-core/src/: lib.rs
rust/crates/zfaktury-core/src/calc/: annual_base.rs  constants.rs  credits.rs  deductions.rs  fifo.rs  income_tax.rs  insurance.rs  mod.rs  recurring.rs  vat.rs
rust/crates/zfaktury-core/src/repository/: traits.rs  types.rs
rust/crates/zfaktury-core/src/service/: audit_svc.rs  backup_svc.rs  category_svc.rs  contact_svc.rs  dashboard_svc.rs  document_svc.rs  expense_svc.rs  fakturoid_import_svc.rs  health_insurance_svc.rs  import_svc.rs  income_tax_return_svc.rs  investment_document_svc.rs  investment_income_svc.rs  invoice_document_svc.rs  invoice_svc.rs  mod.rs  ocr_svc.rs  overdue_svc.rs  recurring_expense_svc.rs  recurring_invoice_svc.rs  reminder_svc.rs  report_svc.rs  sequence_svc.rs  settings_svc.rs  social_insurance_svc.rs  tax_calendar_svc.rs  tax_credits_svc.rs  tax_deduction_document_svc.rs  tax_year_settings_svc.rs  vat_control_svc.rs  vat_return_svc.rs  vies_svc.rs
rust/crates/zfaktury-db/: Cargo.toml
rust/crates/zfaktury-db/src/: connection.rs  error.rs  helpers.rs  lib.rs  migrate.rs  test_db.rs
rust/crates/zfaktury-db/src/repos/: audit_log_repo.rs  mod.rs  (+32 more)
rust/crates/zfaktury-domain/: Cargo.toml
rust/crates/zfaktury-domain/src/: amount.rs  annual_tax.rs  audit.rs  bank.rs  category.rs  contact.rs  errors.rs  expense.rs  import.rs  investment.rs  invoice.rs  lib.rs  ocr.rs  recurring.rs  reminder.rs  settings.rs  tax.rs  tax_credits.rs
rust/crates/zfaktury-gen/: Cargo.toml
rust/crates/zfaktury-gen/src/: lib.rs
rust/crates/zfaktury-gen/templates/: invoice.typ
rust/crates/zfaktury-testutil/: Cargo.toml
rust/crates/zfaktury-testutil/src/: builders.rs  golden.rs  lib.rs
rust/docs/: ARCHITECTURE.md  GUI-DEVELOPMENT.md
rust/docs/AGENT-REPORTS/: SECURITY.md
rust/implementation/: AGENT-PROMPT.md  STATUS.md  phase-1-foundation.md  phase-11-ui-completion.md  phase-2-persistence.md  phase-3-generation.md  phase-4-external-apis.md  phase-5-services.md  phase-6-gpui-app.md  phase-7-polish.md
rust/implementation/rfc/: 020-expense-ocr-import.md  021-pdf-download-export.md  022-tax-credits-crud.md  023-investment-crud-ocr.md  024-tax-prepayments-edit.md
rust/migrations/: V10__recurring_expenses.sql  V12__invoice_status_history.sql  V13__payment_reminders.sql  V14__vat_filings.sql  V15__annual_tax.sql  V16__tax_prepayments.sql  V17__tax_credits_deductions.sql  V18__spouse_months.sql  V19__investment_income.sql  V1__initial_schema.sql  V20__fakturoid_import_log.sql  V21__audit_log_expand.sql  V22__invoice_documents.sql  V23__expense_items.sql  V24__backup_history.sql  V4__expense_categories.sql  V5__vat_unreliable_timestamp.sql  V6__expense_documents.sql  V7__invoice_relations.sql  V8__tax_review.sql  V9__recurring_invoices.sql
rust/scripts/: headless-screenshot.sh
(+717 files in other folders)
