[workspace]
resolver = "2"
members = [
    "crates/zfaktury-app",
    "crates/zfaktury-config",
    "crates/zfaktury-domain",
    "crates/zfaktury-core",
    "crates/zfaktury-db",
    "crates/zfaktury-testutil",
    "crates/zfaktury-gen",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93"
