[package]
name = "zfaktury-app"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "wayland", "x11"] }
zfaktury-core = { path = "../zfaktury-core" }
zfaktury-domain = { path = "../zfaktury-domain" }
zfaktury-gen = { path = "../zfaktury-gen" }
zfaktury-db = { path = "../zfaktury-db" }
zfaktury-config = { path = "../zfaktury-config" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
log = "0.4"
