[package]
name = "zfaktury-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
zfaktury-domain = { path = "../zfaktury-domain" }
zfaktury-api = { path = "../zfaktury-api" }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest = "0.25"
proptest = "1"
