[package]
name = "zfaktury-db"
version = "0.1.0"
edition.workspace = true

[dependencies]
zfaktury-domain = { path = "../zfaktury-domain" }
zfaktury-core = { path = "../zfaktury-core" }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
thiserror = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"
