[package]
name = "zfaktury-gen"
version = "0.1.0"
edition.workspace = true

[dependencies]
zfaktury-domain = { path = "../zfaktury-domain" }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
csv = "1"
thiserror = "2"

[dev-dependencies]
zfaktury-testutil = { path = "../zfaktury-testutil" }
